--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 	    <plugin>
 		<groupId>com.fortify.sca.plugins.maven</groupId>
 		<artifactId>sca-maven-plugin-master</artifactId>
-		<version>19.2.2</version
+		<version>19.2.2</version>
 	    </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
