--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,11 @@
                     <encoding>ISO-8859-1</encoding>
                 </configuration>
             </plugin>
-	    
+	    <plugin>
+          	<groupId>com.fortify.sca.plugins.maven</groupId>
+          	<artifactId>sca-maven-plugin</artifactId>
+          	<version>19.2.2</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
